--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -5,7 +5,7 @@
     
     <!-- Profile Section with Enhanced Design -->
     <div class="sidebar-profile-section p-6">
-      <div [routerLink]="['/']" routerLinkActive="router-link-active"
+      <div [routerLink]="['/', 'user-infor', userInfor.sub]" routerLinkActive="router-link-active"
         class="cursor-pointer flex flex-col items-center justify-center transition-all duration-300 hover:scale-105">
         
         <div class="relative mb-4">
